--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,12 +39,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/react": "^14.0.0",
-    "babel-jest": "^29.5.0",
-    "jest": "^27.5.1",
+    "jest": "^29.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
